# TW-sample-financial-fraud-detection-with-nvidia

./: CHANGELOG.md  Makefile  README.md
.github/: CODEOWNERS
docs/: ngc-setup.md
docs/roadmap/: 01-project-overview.md  02-kubeflow-installation.md  03-pipeline-components.md  04-migration-phases.md  05-infrastructure-changes.md  06-validation-testing.md  07-kubeflow-notebooks.md  README.md
infra/: README.md
infra/lib/: argocd-values.ts  deploykf-app.ts  kf-addon.ts  kf-policy.ts  nodepool-addon.ts  tar-extractor-stack.ts  (+2 more)
notebooks/: DEMO_Financial_Fraud_Detection.ipynb  IEEE_CIS_EDA.ipynb  IEEE_CIS_EDA.py  financial-fraud-usage-v2.ipynb  kubeflow-fraud-detection.ipynb  kubeflow-notebook-server.yaml
src/: preprocess_TabFormer.py  visualize_graph.py
triton/: Dockerfile
workflows/: .gitignore  README.md  pyproject.toml
workflows/src/workflows/: __init__.py  cudf_e2e_pipeline.py  e2e_pipeline.py  pipeline.py  training_pipeline.py  validation_pipeline.py
workflows/src/workflows/components/: __init__.py  clean_data.py  fit_transformers.py  load_data.py  prepare_gnn.py  prepare_xgb.py  preprocess_tabformer.py  split_data.py  test_model.py  train_model.py  visualize.py
workflows/src/workflows/utils/: __init__.py  constants.py  transforms.py
workflows/utils/: test_local.py
workflows/workflows/: __init__.py  pipeline.py  preprocess.py
workflows/workflows/components/: __init__.py  clean_data.py  fit_transformers.py  load_data.py  prepare_gnn.py  prepare_xgb.py  split_data.py
workflows/workflows/utils/: __init__.py  constants.py  transforms.py
(+16 files in other folders)
